# mycodeplug

./: Dockerfile  README.md  Vagrantfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
docs/: architecture.md
src/mycodeplug/: api.py  channel.py  db.py  logging.py  mail.py  user.py
src/schema/: 10_init.sql  20_schema.sql  sample_data.sql
